Fix simulator CSS (scroll on overflow).

--- a/src/components/ide/Simulator/Simulator.scss
+++ b/src/components/ide/Simulator/Simulator.scss
@@ -4,15 +4,18 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-float: row nowrap;
 }
 
 .container {
-  align-self: center;
-  margin: 0 auto;
+  align-self: stretch;
   max-width: var(--max-content-width);
+  flex-grow: 1;
+  overflow: scroll;
+  display: flex;
+  align-items: center;
 }
 
 .canvas {
-  min-height: 300px;
+  margin: auto;
+  padding: 20px;
 }
